tests/ui/derive/fail_loaded_projection.rs
#![allow(unused_imports)]

use foundry::prelude::*;

#[derive(Clone, Debug, PartialEq, foundry::Projection)]
struct UserRow {
    tags: Loaded<Vec<String>>,
}

fn main() {}
